--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
     "flowbite": "^2.5.2",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
