--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "flowbite": "^2.5.2",
+    "jszip": "^3.10.1",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4"
   },
